--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,9 @@
         android:theme="@style/Theme.RifaKing"
         tools:targetApi="31">
         <activity
+            android:name=".MeusPontos"
+            android:exported="false" />
+        <activity
             android:name=".Activity_darecycler_Rifa"
             android:exported="false" />
         <activity
